[gd_scene load_steps=4 format=3 uid="uid://cx3ehspi6ekqs"]

[ext_resource type="PackedScene" uid="uid://di76lyecqgo53" path="res://Zones/interactive_area.tscn" id="1_cene1"]
[ext_resource type="Script" path="res://Scripts/Interactive/Hanging/HangZone.gd" id="2_5xdgu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ff7x"]
radius = 29.7321

[node name="HangZone" node_paths=PackedStringArray("Collision") instance=ExtResource("1_cene1")]
script = ExtResource("2_5xdgu")
Collision = NodePath("CollisionShape2D")
ButtonZone = false

[node name="Marker2D" type="Marker2D" parent="." index="0"]
position = Vector2(0, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_7ff7x")

[node name="Polygon2D" type="Polygon2D" parent="." index="2"]
position = Vector2(-1, -3)
color = Color(0.362829, 0.362829, 0.362829, 1)
polygon = PackedVector2Array(-23, -21, -28, -7, -29, 10, -19, 24, -13, 30, -7.69536, 31.6322, 0, 34, 20, 28, 27, 14, 32, 3, 33, -11, 27, -16, 21, -10, 18, -9, 21, 4, 14, 18, 0, 21, -11, 15, -17, 4, -17, -12, 0, -19, 12, -17, 18, -9, 21, -10, 27, -16, 16, -27, 2, -31, -9, -28)

[node name="ColisionTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true

[connection signal="interacted" from="." to="." method="_on_interacted"]
[connection signal="timeout" from="ColisionTimer" to="." method="_on_colision_timer_timeout"]
